[package]
name = "release-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
my-http-server = { tag = "0.8.2", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }

my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }


tokio = { version = "*", features = ["full"] }
prost = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio-util = "*"
futures = "*"
futures-util = "*"
async-trait = "*"
